--- a/views/add-new-jobs.hbs
+++ b/views/add-new-jobs.hbs
@@ -238,7 +238,7 @@
 					</label>
 				</div>
 			</th> --}}
-			<td class="job-element" contenteditable="true" data-type="siteid"><%=siteId%>dd</td>
+			<td class="job-element" contenteditable="true" data-type="siteid"><%=siteId%></td>
 			<td class="job-element" contenteditable="true" data-type="panalid"><%=panalId%></td>
 			<td class="job-element" contenteditable="true" data-type="location"><%=location%></td>
 			<td class="job-element" contenteditable="true" data-type="statepostalcode"><%=statepostalcode%></td>
