--- a/views/maps-view.hbs
+++ b/views/maps-view.hbs
@@ -50,12 +50,17 @@
 			top: 225px;
 		}
 		#buttons2{
+			display: inline-block;
 			top: 285px;
     left: 268px;
-    width: 23%;
+    width: 30%;
 		}
 		#buttons2 input{
-    
+    		display: inline-block;
+    		width: 80%;
+		}
+		#buttons2 .input-group-btn {
+			display: inline-block;
 		}
 		#buttons1 label{
 			margin-right: 20px !important;
