--- a/views/maps-view.hbs
+++ b/views/maps-view.hbs
@@ -287,7 +287,7 @@
 				<span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
-			<li class="selected" data-value=""><a href="#">All</a></li>
+			<li class="active" data-value=""><a href="#">All</a></li>
 				<!-- dropdown menu links -->
 			</ul>
 		</div>
@@ -297,7 +297,7 @@
 				<span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
-			<li class="selected" data-value=""><a href="#">All</a></li>
+			<li class="active" data-value=""><a href="#">All</a></li>
 				<!-- dropdown menu links -->
 			</ul>
 		</div>
@@ -307,7 +307,7 @@
 				<span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
-			<li class="selected" data-value=""><a href="#">All</a></li>
+			<li class="active" data-value=""><a href="#">All</a></li>
 				<!-- dropdown menu links -->
 			</ul>
 		</div>
@@ -317,7 +317,7 @@
 				<span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
-			<li class="selected" data-value=""><a href="#">All</a></li>
+			<li class="active" data-value=""><a href="#">All</a></li>
 				<!-- dropdown menu links -->
 			</ul>
 		</div>
@@ -330,7 +330,7 @@
 				<span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
-			<li class="selected" data-value=""><a href="#">All</a></li>
+			<li class="active" data-value=""><a href="#">All</a></li>
 				<!-- dropdown menu links -->
 			</ul>
 		</div>
@@ -340,7 +340,7 @@
 				<span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
-			<li class="selected" data-value=""><a href="#">All</a></li>
+			<li class="active" data-value=""><a href="#">All</a></li>
 				<!-- dropdown menu links -->
 			</ul>
 		</div>
@@ -350,7 +350,7 @@
 				<span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
-			<li class="selected" data-value=""><a href="#">All</a></li>
+			<li class="active" data-value=""><a href="#">All</a></li>
 				<!-- dropdown menu links -->
 			</ul>
 		</div>
