--- a/views/maps-view.hbs
+++ b/views/maps-view.hbs
@@ -269,16 +269,15 @@
 	<div class="container-fluid" id="wrapper-container">
 		<div id="buttons1">
 		<div class="button-section pull-right text-center search-section">
-		<div id="custom-search-input">
-                            <div class="input-group col-md-12">
-                                <input type="text" class="  search-query form-control" placeholder="Search" />
-                                <span class="input-group-btn">
-                                    <button class="btn btn-danger" type="button">
-                                        <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-                        </div>
+		<input type="text" class="form-control" id="search-area" placeholder="Search by name / OISA Data">
+								<span class="input-group-btn">
+									<button class="btn btn-default" type="button" id="search-job-by-name">
+										<i class="fa fa-search" aria-hidden="true"></i>
+									</button>
+									<button class="btn btn-default" type="button" id="clear-search">
+										<i class="fa fa-times" aria-hidden="true"></i>
+									</button>
+								</span>
 		</div>
 		<div class="button-section">
 		<div class="btn-group">
