--- a/views/jobs-confirmed.hbs
+++ b/views/jobs-confirmed.hbs
@@ -173,7 +173,8 @@
 									<th data-sort="string">SIN <i class="fa fa-sort" aria-hidden="true"></th>
 									<th data-sort="string">TYPE <i class="fa fa-sort" aria-hidden="true"></th>
 									<th data-sort="string">Location <i class="fa fa-sort" aria-hidden="true"></th>
-									<th data-sort="string">State Postal Code <i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-sort="string">State <i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-sort="string">Postal Code <i class="fa fa-sort" aria-hidden="true"></th>
 									<th data-sort="string">Completed date & time <i class="fa fa-sort" aria-hidden="true"></th>
 								</tr>
 							</thead>
@@ -211,7 +212,8 @@
 			<td><%=siteId%></td>
 			<td><%=jobtype%></td>
 			<td><%=location%> </td>
-			<td><%=statePostalCode%></td>
+			<td><%=state%></td>
+			<td><%=PostalCode%></td>
 			<td><%=completeddate%></td>
 		</tr>
 	</script>
