--- a/views/jobs-landing.hbs
+++ b/views/jobs-landing.hbs
@@ -179,6 +179,7 @@
 									<th data-sort="string">JOB TYPE <i class="fa fa-sort" aria-hidden="true"></i></th>
 									<th data-sort="string">Location <i class="fa fa-sort" aria-hidden="true"></i></th>
 									<th data-sort="string">State <i class="fa fa-sort" aria-hidden="true"></i></th>
+									<th data-sort="string">Postal Code <i class="fa fa-sort" aria-hidden="true"></i></th>
 									<th data-sort="string">Start Date <i class="fa fa-sort" aria-hidden="true"></i></th>
 									<th data-sort="string">End Date <i class="fa fa-sort" aria-hidden="true"></i></th>
 								</tr>
@@ -252,7 +253,8 @@
 			<td class="job-element" data-type="siteId"><%=siteId%></td>
 			<td class="job-element" data-type="jobtype"><%=jobtype%></td>
 			<td class="job-element" data-type="location"><%=location%></td>
-			<td class="job-element" data-type="startdate"><%=statePostalCode%></td>
+			<td class="job-element" data-type="startdate"><%=state%></td>
+			<td class="job-element" data-type="startdate"><%=PostalCode%></td>
 			<td class="job-element" data-type="startdate"><%=startdate%></td>
 			<td class="job-element endDate" data-type="completeddate"><%=completeddate%></td>
 		</tr>
