--- a/views/jobs-progress.hbs
+++ b/views/jobs-progress.hbs
@@ -155,7 +155,8 @@
 								<th data-sort="string">JOB ID <i class="fa fa-sort" aria-hidden="true"></th>
 								<th data-sort="string">SIN <i class="fa fa-sort" aria-hidden="true"></th>
 								<th data-sort="string">Location <i class="fa fa-sort" aria-hidden="true"></th>
-								<th data-sort="string">State Postal Code <i class="fa fa-sort" aria-hidden="true"></th>
+								<th data-sort="string">State <i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-sort="string">Postal Code <i class="fa fa-sort" aria-hidden="true"></th>
 								<th>Location on MAP</th>
 								<th data-sort="string">End Date <i class="fa fa-sort" aria-hidden="true"></i></th>
 							</tr>
@@ -193,7 +194,8 @@
 		<td class="jobId"><%=jobid%></td>
 		<td class="siteId"><%=siteId%></td>
 		<td class="location"><%=location%></td>
-		<td class="PostalCode"><%=statePostalCode%></td>
+		<td><%=state%></td>
+			<td><%=PostalCode%></td>
 		<td class="view-map" data-latitude="<%=latitude%>" data-longitude="<%=longitude%>" data-auditorlatitude="<%=auditorlatitude%>" data-auditorlongitude="<%=auditorlongitude%>">
 			<i class="fa fa-location-arrow" aria-hidden="true"></i>
 		</td>
