--- a/views/maps-view.hbs
+++ b/views/maps-view.hbs
@@ -121,55 +121,55 @@
 		}
 
 
-#custom-search-input {
-        margin:0;
-        margin-top: 10px;
-        padding: 0;
-    }
- 
-    #custom-search-input .search-query {
-        padding-right: 3px;
-        padding-right: 4px \9;
-        padding-left: 3px;
-        padding-left: 4px \9;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
- 
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
- 
-    #custom-search-input button {
-        border: 0;
-        background: none;
-        /** belows styles are working good */
-        padding: 2px 5px;
-        margin-top: 2px;
-        position: relative;
-        left: -28px;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        color: #000;
-    }
- 
-    .search-query:focus + button {
-        z-index: 3;   
-    }
-    .search-section{
-    	width: 25%;
-    }
-    .open>.dropdown-menu {
-    display: block;
-    max-height: 200px !important;
-    overflow: scroll;
-}
-.daterangepicker{
-	z-index: 10000 !important;
-}
+		#custom-search-input {
+			margin:0;
+			margin-top: 10px;
+			padding: 0;
+		}
+
+		#custom-search-input .search-query {
+			padding-right: 3px;
+			padding-right: 4px \9;
+			padding-left: 3px;
+			padding-left: 4px \9;
+			/* IE7-8 doesn't have border-radius, so don't indent the padding */
+
+			margin-bottom: 0;
+			-webkit-border-radius: 3px;
+			-moz-border-radius: 3px;
+			border-radius: 3px;
+		}
+
+		#custom-search-input button {
+			border: 0;
+			background: none;
+			/** belows styles are working good */
+			padding: 2px 5px;
+			margin-top: 2px;
+			position: relative;
+			left: -28px;
+			/* IE7-8 doesn't have border-radius, so don't indent the padding */
+			margin-bottom: 0;
+			-webkit-border-radius: 3px;
+			-moz-border-radius: 3px;
+			border-radius: 3px;
+			color: #000;
+		}
+
+		.search-query:focus + button {
+			z-index: 3;   
+		}
+		.search-section{
+			width: 25%;
+		}
+		.open>.dropdown-menu {
+			display: block;
+			max-height: 200px !important;
+			overflow: scroll;
+		}
+		.daterangepicker{
+			z-index: 10000 !important;
+		}
 
 	</style>
 
@@ -268,99 +268,110 @@
 	</section>
 	<div class="container-fluid" id="wrapper-container">
 		<div id="buttons1">
-		<div class="button-section pull-right text-center search-section">
-		<input type="text" class="form-control" id="search-area" placeholder="Search by name / OISA Data">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button" id="search-job-by-name">
-										<i class="fa fa-search" aria-hidden="true"></i>
-									</button>
-									<button class="btn btn-default" type="button" id="clear-search">
-										<i class="fa fa-times" aria-hidden="true"></i>
-									</button>
-								</span>
-		</div>
-		<div class="button-section">
-		<div class="btn-group">
-		<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="jobtype">
-				<label class="drop-text">Job Type</label>
-				<span class="caret"></span>
-			</a>
-			<ul class="dropdown-menu">
-			<li class="active" data-value=""><a href="#">All</a></li>
-				<!-- dropdown menu links -->
-			</ul>
-		</div>
-		<div class="btn-group">
-		<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="inspectionid">
-				<label class="drop-text">Inspection ID</label>
-				<span class="caret"></span>
-			</a>
-			<ul class="dropdown-menu">
-			<li class="active" data-value=""><a href="#">All</a></li>
-				<!-- dropdown menu links -->
-			</ul>
-		</div>
-		<div class="btn-group">
-		<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="state">
-				<label class="drop-text">States</label>
-				<span class="caret"></span>
-			</a>
-			<ul class="dropdown-menu">
-			<li class="active" data-value=""><a href="#">All</a></li>
-				<!-- dropdown menu links -->
-			</ul>
-		</div>
-		<div class="btn-group">
-		<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="postalcode">
-				<label class="drop-text">Postal Code</label>
-				<span class="caret"></span>
-			</a>
-			<ul class="dropdown-menu">
-			<li class="active" data-value=""><a href="#">All</a></li>
-				<!-- dropdown menu links -->
-			</ul>
-		</div>
-		</div>
+			<div class="button-section pull-right text-center search-section">
+				<input type="text" class="form-control" id="search-area" placeholder="Search by name / OISA Data">
+				<span class="input-group-btn">
+					<button class="btn btn-default" type="button" id="search-job-by-name">
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</button>
+					<button class="btn btn-default" type="button" id="clear-search">
+						<i class="fa fa-times" aria-hidden="true"></i>
+					</button>
+				</span>
+			</div>
+			<div class="button-section">
+				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="jobtype">
+						<label class="drop-text">Job Type</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">All</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="inspectionid">
+						<label class="drop-text">Inspection ID</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">All</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="state">
+						<label class="drop-text">States</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">All</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="postalcode">
+						<label class="drop-text">Postal Code</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">All</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown maptype-dropdown" data-toggle="dropdown" href="#" data-type="maptype">
+						<label class="drop-text">Map Type</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">Basic</a></li>
+						<li data-value="Clustered"><a href="#">Clustered</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+			</div>
 
-		<div class="button-section">
-		<div class="btn-group">
-		<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="contractor">
-				<label class="drop-text">Contracor</label>
-				<span class="caret"></span>
-			</a>
-			<ul class="dropdown-menu">
-			<li class="active" data-value=""><a href="#">All</a></li>
-				<!-- dropdown menu links -->
-			</ul>
+			<div class="button-section">
+				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="contractor">
+						<label class="drop-text">Contracor</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">All</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="campaign">
+						<label class="drop-text">Campaign</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">All</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="errors">
+						<label class="drop-text">Errors</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">All</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+				<div class="btn-group">
+					<div class="form-group">
+						<label for="daterange">Date Range:</label>
+						<input type="text" class="form-control" name="daterange" id="daterange">
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="btn-group">
-		<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="campaign">
-				<label class="drop-text">Campaign</label>
-				<span class="caret"></span>
-			</a>
-			<ul class="dropdown-menu">
-			<li class="active" data-value=""><a href="#">All</a></li>
-				<!-- dropdown menu links -->
-			</ul>
-		</div>
-		<div class="btn-group">
-		<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="errors">
-				<label class="drop-text">Errors</label>
-				<span class="caret"></span>
-			</a>
-			<ul class="dropdown-menu">
-			<li class="active" data-value=""><a href="#">All</a></li>
-				<!-- dropdown menu links -->
-			</ul>
-		</div>
-		<div class="btn-group">
-		<div class="form-group">
-      <label for="daterange">Date Range:</label>
-      <input type="text" class="form-control" name="daterange" id="daterange">
-    </div>
-		</div>
-		</div>
-	</div>
 		<div id="map" style="position: absolute;width: 100%;"></div>
 		<div id="campground_info"></div>
 	</div>
@@ -374,7 +385,7 @@
 	<script src="js/vendor/underscore.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 	<script type="text/javascript" src="http://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
-<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+	<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
 	<script src="js/api_scripts/map_view.js"></script>
 	<script src="js/api_scripts/user_data.js"></script>
 	
