--- a/views/maps-view.hbs
+++ b/views/maps-view.hbs
@@ -291,6 +291,17 @@
 					</ul>
 				</div>
 				<div class="btn-group">
+					<a class="btn dropdown-toggle btn-primary filter-dropdown maptype-dropdown" data-toggle="dropdown" href="#" data-type="maptype">
+						<label class="drop-text">Map Type</label>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="active" data-value=""><a href="#">Basic</a></li>
+						<li data-value="Clustered"><a href="#">Clustered</a></li>
+						<!-- dropdown menu links -->
+					</ul>
+				</div>
+				<div class="btn-group">
 					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="inspectionid">
 						<label class="drop-text">Inspection ID</label>
 						<span class="caret"></span>
@@ -321,13 +332,12 @@
 					</ul>
 				</div>
 				<div class="btn-group">
-					<a class="btn dropdown-toggle btn-primary filter-dropdown maptype-dropdown" data-toggle="dropdown" href="#" data-type="maptype">
-						<label class="drop-text">Map Type</label>
+					<a class="btn dropdown-toggle btn-primary filter-dropdown" data-toggle="dropdown" href="#" data-type="status">
+						<label class="drop-text">Status</label>
 						<span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu">
-						<li class="active" data-value=""><a href="#">Basic</a></li>
-						<li data-value="Clustered"><a href="#">Clustered</a></li>
+						<li class="active" data-value=""><a href="#">All</a></li>
 						<!-- dropdown menu links -->
 					</ul>
 				</div>
