map view changes

--- a/views/forgot-password.hbs
+++ b/views/forgot-password.hbs
@@ -37,7 +37,7 @@
 				</div>
 				<div class="s-getstarted pull-right">
 					<label>Don’t have an account?</label>
-					<button class="btn btn-default register-btn">GET STARTED</button>
+					<a class="btn btn-default register-btn" href="/">GET STARTED</a>
 				</div>
 				<div class="s-form">
 					<div class="s-welcome">
@@ -53,7 +53,7 @@
 						</div>
 						<button class="btn btn-default signin-btn">REQUEST RESET LINK</button>
 						<label class="back-to text-center">
-							<a href="">BACK TO SIGN IN</a>
+							<a href="/">BACK TO SIGN IN</a>
 						</label>
 					</form>
 				</div>
