--- a/views/jobs-landing.hbs
+++ b/views/jobs-landing.hbs
@@ -145,6 +145,14 @@
 
 						</div>
 					</div>
+					<div class="col-md-4 mpad0 text-center">
+						<div class="inspection-data">
+							<a href="/jobs-assigned">
+								<img src="images/job3.png" alt="">
+								<label>View Assigned Jobs</label>
+							</a>
+						</div>
+					</div>
 				</div>
 				<div class="col-md-12 mpad0" id="confirm-section">
 					<div class="col-md-12 viewList">
