--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -37,7 +37,7 @@
 				</div>
 				<div class="s-getstarted pull-right">
 					<label>Don’t have an account? <span>-  It’s Free</span></label>
-					<button class="btn btn-default register-btn"><a href="/signup">GET STARTED</a></button>
+					<a class="btn btn-default register-btn" href="/signup">GET STARTED</a>
 				</div>
 				<div class="s-form">
 					<div class="s-welcome">
@@ -63,6 +63,9 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript">
+	console.log( "{{title}}")
+	</script>
 	<script type="text/javascript" src="http://c3173.r73.cf2.rackcdn.com/Kumulos.min.js"></script>
 
 	<script src="js/vendor/jquery-3.1.0.min.js"></script>
