--- a/views/jobs-assigned.hbs
+++ b/views/jobs-assigned.hbs
@@ -133,7 +133,7 @@
 						</div>
 					</div>
 					<div class="col-md-4 mpad0 text-center">
-						<div class="inspection-data active">
+						<div class="inspection-data">
 							<a href="/jobs-progress">
 								<img src="images/job3.png" alt="">
 								<label>Jobs in Progress</label>
@@ -141,7 +141,7 @@
 						</div>
 					</div>
 					<div class="col-md-4 mpad0 text-center">
-						<div class="inspection-data">
+						<div class="inspection-data active">
 							<a href="/jobs-assigned">
 								<img src="images/job3.png" alt="">
 								<label>View Assigned Jobs</label>
@@ -158,14 +158,15 @@
 					<table class="table">
 						<thead>
 							<tr>
-								<th data-sort="string" data-type="name">Name <i class="fa fa-sort" aria-hidden="true"></i> </th>
-								<th data-sort="string" data-type="status">Status <i class="fa fa-sort" aria-hidden="true"></i> </th>
-								<th data-sort="string">JOB ID <i class="fa fa-sort" aria-hidden="true"></th>
-								<th data-sort="string">SIN <i class="fa fa-sort" aria-hidden="true"></th>
-								<th data-sort="string">Location <i class="fa fa-sort" aria-hidden="true"></th>
+								<th data-sort="string" data-type="name">siteId <i class="fa fa-sort" aria-hidden="true"></i> </th>
+								<th data-sort="string" data-type="status">Location <i class="fa fa-sort" aria-hidden="true"></i> </th>
+								<!-- <th data-sort="string">StatePostalCode <i class="fa fa-sort" aria-hidden="true"></th> -->
+								<!-- <th data-sort="string">Location <i class="fa fa-sort" aria-hidden="true"></th> -->
+								<th data-sort="string">GeoCodedLocation <i class="fa fa-sort" aria-hidden="true"></th>
 								<th data-sort="string">State <i class="fa fa-sort" aria-hidden="true"></th>
 									<th data-sort="string">Postal Code <i class="fa fa-sort" aria-hidden="true"></th>
 								<th>Location on MAP</th>
+								<th data-sort="string">Start Date <i class="fa fa-sort" aria-hidden="true"></i></th>
 								<th data-sort="string">End Date <i class="fa fa-sort" aria-hidden="true"></i></th>
 							</tr>
 						</thead>
@@ -190,23 +191,15 @@
 	</div>
 <script type="text/template" id="job-template">
 	<tr data-type="<%=jobtype%>">
-		<td class="userName"><%=name%></td>
-		<td>
-			<div class="progress">
-				<div class="progress-bar" role="progressbar" aria-valuenow="<%=completeness%>"
-					aria-valuemin="0" aria-valuemax="100" style="width:<%=completeness%>%">
-					<span class="sr-only"><%=completeness%>% Complete</span>
-				</div>
-			</div>
-		</td>
-		<td class="jobId"><%=jobid%></td>
-		<td class="siteId"><%=siteId%></td>
-		<td class="location"><%=location%></td>
-		<td><%=state%></td>
+	<td class="siteId"><%=siteId%></td>
+	<td><%=location%></td>
+	<td class="siteId"><%=siteId%></td>
+	<td><%=state%></td>
 			<td><%=PostalCode%></td>
-		<td class="view-map" data-latitude="<%=latitude%>" data-longitude="<%=longitude%>" data-auditorlatitude="<%=auditorlatitude%>" data-auditorlongitude="<%=auditorlongitude%>">
+			<td class="view-map" data-latitude="<%=latitude%>" data-longitude="<%=longitude%>" data-auditorlatitude="<%=auditorlatitude%>" data-auditorlongitude="<%=auditorlongitude%>">
 			<i class="fa fa-location-arrow" aria-hidden="true"></i>
 		</td>
+		<td class="coloumn"><%=completeddate%></td>
 		<td class="coloumn"><%=completeddate%></td>
 	</tr>
 </script>
@@ -241,7 +234,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stupidtable/1.0.3/stupidtable.min.js"></script>
 <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyC7lEhWOW6t8D5yWL0FwnL_Wa7QgyVNe7o&libraries=places'></script>
 	<script src="js/vendor/location.picker.min.js"></script>
-<script src="js/api_scripts/jobs-progress.js"></script>
+<script src="js/api_scripts/jobs-assigned.js"></script>
 <script src="js/api_scripts/user_data.js"></script>
 
 </body>
