--- a/views/jobs-assigned.hbs
+++ b/views/jobs-assigned.hbs
@@ -21,8 +21,9 @@
 	<link rel="stylesheet" type="text/css" href="css/signin.css">
 	<link rel="stylesheet" type="text/css" href="css/jobs.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-		  <script src='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.js'></script>
-  <link href='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.css' rel='stylesheet' />
+	<script src='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.js'></script>
+	<link href='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.css' rel='stylesheet' />
+	<link rel="stylesheet" type="text/css" href="http://www.jqueryscript.net/demo/Lightweight-Interactive-Pagination-Plugin-jQuery-jqPagination/css/jqpagination.css">
 </head>
 <body>
 	<div class="overflow-scroll">
@@ -164,7 +165,7 @@
 								<!-- <th data-sort="string">Location <i class="fa fa-sort" aria-hidden="true"></th> -->
 								<th data-sort="string">GeoCodedLocation <i class="fa fa-sort" aria-hidden="true"></th>
 								<th data-sort="string">State <i class="fa fa-sort" aria-hidden="true"></th>
-									<th data-sort="string">Postal Code <i class="fa fa-sort" aria-hidden="true"></th>
+								<th data-sort="string">Postal Code <i class="fa fa-sort" aria-hidden="true"></th>
 								<th>Location on MAP</th>
 								<th data-sort="string">Start Date <i class="fa fa-sort" aria-hidden="true"></i></th>
 								<th data-sort="string">End Date <i class="fa fa-sort" aria-hidden="true"></i></th>
@@ -174,29 +175,54 @@
 						</tbody>
 					</table>
 					<nav class="text-center">
-						<ul class="pagination">
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
-	</section>
-</div>
-<div class="modal modalalign" id="map-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div id="map-area" style="width: 100%; height: 400px;"></div>
+						<!-- <ul class="pagination">
+
+					</ul> -->
+					<label for="pagination-limit">Pagination Limit</label>
+					<select class="form-control" id="pagination-limit">
+						<option value="10">10</option>
+						<option value="20">20</option>
+						<option value="30">30</option>
+						<option value="40">40</option>
+						<option value="50">50</option>
+						<option value="60">60</option>
+						<option value="70">70</option>
+						<option value="80">80</option>
+						<option value="90">90</option>
+						<option value="100">100</option>
+						<option value="200">200</option>
+						<option value="300">300</option>
+						<option value="400">400</option>
+						<option value="500">500</option>
+					</select>
+					<div class="pagination">
+						<a href="#" class="first" data-action="first">&laquo;</a>
+						<a href="#" class="previous" data-action="previous">&lsaquo;</a>
+						<input type="text" readonly="readonly" data-max-page="10" />
+						<a href="#" class="next" data-action="next">&rsaquo;</a>
+						<a href="#" class="last" data-action="last">&raquo;</a>
+					</div>
+				</nav>
 			</div>
 		</div>
 	</div>
+</section>
+</div>
+<div class="modal modalalign" id="map-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div id="map-area" style="width: 100%; height: 400px;"></div>
+		</div>
+	</div>
+</div>
 <script type="text/template" id="job-template">
 	<tr data-type="<%=jobtype%>">
-	<td class="siteId"><%=siteId%></td>
-	<td><%=location%></td>
-	<td class="siteId"><%=siteId%></td>
-	<td><%=state%></td>
-			<td><%=PostalCode%></td>
-			<td class="view-map" data-latitude="<%=latitude%>" data-longitude="<%=longitude%>" data-auditorlatitude="<%=auditorlatitude%>" data-auditorlongitude="<%=auditorlongitude%>">
+		<td class="siteId"><%=siteId%></td>
+		<td><%=location%></td>
+		<td class="siteId"><%=siteId%></td>
+		<td><%=state%></td>
+		<td><%=PostalCode%></td>
+		<td class="view-map" data-latitude="<%=latitude%>" data-longitude="<%=longitude%>" data-auditorlatitude="<%=auditorlatitude%>" data-auditorlongitude="<%=auditorlongitude%>">
 			<i class="fa fa-location-arrow" aria-hidden="true"></i>
 		</td>
 		<td class="coloumn"><%=completeddate%></td>
@@ -204,25 +230,7 @@
 	</tr>
 </script>
 <script type="text/template" id="pagination-template">
-	<li class="first-element" data-action="first"><a href="#"><span aria-hidden="true">&larr;</span> Older</a></li>
-	<li class="previous-element"><a href="#" aria-label="Previous" data-action="previous"><span aria-hidden="true">«</span></a></li>
-	<input class="hide" type="text" readonly="readonly" data-max-page="<%=items.length%>"/>
-	<%_.each(items, function(item) {%>
-		<%if(item.index ==0){%>
-			<li class="pagination-element active" data-index="<%=item.index%>">
-				<%}else{%>
-					<%if(item.is_hidden){%>
-						<li class="pagination-element hide" data-index="<%=item.index%>">
-							<%}else{%>
-								<li class="pagination-element" data-index="<%=item.index%>">
-									<%}}%>
-									<a href="#"><%=item.label%></a>
-								</li>
-
-
-								<%})%>
-	<li class="next-element"><a href="#" aria-label="Next" data-action="next"><span aria-hidden="true">»</span></a></li>
-	<li class="last-element" data-action="last"><a href="#">Newer <span aria-hidden="true">&rarr;</span></a></li>
+	
 </script>
 <script src="js/vendor/jquery-3.1.0.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
@@ -233,7 +241,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stupidtable/1.0.3/stupidtable.min.js"></script>
 <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyC7lEhWOW6t8D5yWL0FwnL_Wa7QgyVNe7o&libraries=places'></script>
-	<script src="js/vendor/location.picker.min.js"></script>
+<script src="js/vendor/location.picker.min.js"></script>
+<script src="http://www.jqueryscript.net/demo/Lightweight-Interactive-Pagination-Plugin-jQuery-jqPagination/js/jquery.jqpagination.js"></script>
 <script src="js/api_scripts/jobs-assigned.js"></script>
 <script src="js/api_scripts/user_data.js"></script>
 
