--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,6 +122,23 @@ ul,li{
 	width: 200px;
 	margin-bottom: 30px;
 }
+
+/*filter sidebar*/
+.filter-sidebar{
+	width: 300px;
+	position: absolute;
+	top: 0px;
+	background-color: #fff;
+	right: 0px;
+	z-index: 9999;
+}
+.filter-sidebar ul li{
+	display: block;
+	width: 100%;
+}
+.filter-sidebar ul li select{
+	width: 100%;
+}
 /*responsive css*/
 @media screen and (max-width: 991px) {
 	#main-wrapper{
@@ -136,17 +153,17 @@ ul,li{
 }
 
 .loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+	border: 16px solid #f3f3f3; /* Light grey */
+	border-top: 16px solid #3498db; /* Blue */
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
 table th{
 	cursor: pointer;
